Alert words: Fix delete icon overflow out of the box
The Delete icon on alert word list overflows out of the card.
So fix it with appropriate height property.

--- a/static/styles/settings.scss
+++ b/static/styles/settings.scss
@@ -587,6 +587,7 @@ input[type=checkbox].inline-block {
 
 .remove-alert-word {
     margin-top: 1px;
+    height: 35px;
 }
 
 @media (max-width: 480px) {
